# whissle_stt_inference

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  entrypoint.sh  pyproject.toml  requirements.txt  run.sh  setup.sh
scripts/: quantize.py  upload_hf.py
src/: __init__.py  cli.py  config.py  decoder.py  engine.py  preprocessor.py  server.py  streaming.py  vad.py
static/: index.html
